cabal-version:      2.4
name:               samanHG
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             saman
maintainer:

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable samanHG
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base  ^>=4.17.2.1,
                      gloss ^>=1.13.2.2,
                      random,
                      time
    hs-source-dirs:   app
    default-language: Haskell2010
